--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,1 +1,31 @@
-<p>login works!</p>
+<div class="card">
+    <div class="card-body">
+        <h2>Login</h2>
+        <form [formGroup]="loginFormGrp" (ngSubmit)="onSubmitForm()">
+            <div class="form-group">
+                <label for="email">Email:</label>
+                <input type="email" class="form-control" id="email" formControlName="email" [class.is-invalid]="form.email.errors">
+                <div *ngIf="form.email.errors" class="invalid-feedback">
+                    <div *ngIf="form.email.errors.required">Email is required.</div>
+                    <div *ngIf="form.email.errors.pattern">Please provide a valid email address.</div>
+                </div>
+            </div>
+        
+            <div class="form-group">
+                <label for="pass">Password:</label>
+                <input type="password" class="form-control" id="pass" formControlName="password" minlength="6" maxlength="20" [class.is-invalid]="form.password.errors">
+                <div *ngIf="form.password.errors" class="invalid-feedback">
+                    <div *ngIf="form.password.errors.required">Password is required.</div>
+                    <div *ngIf="form.password.errors.minlength">Password must be at least 6 characters.</div>
+                </div>
+            </div>
+        
+            <div class="form-group">
+                <button class="btn btn-primary mr-2">Login</button>
+                <div *ngIf="loader" class="spinner-border text-primary align-middle" role="status">
+                    <span class="sr-only">Loading...</span>
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
